--- a/SuperMarketProject/test-output/index.html
+++ b/SuperMarketProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\shiji\AppData\Local\Temp\testng-eclipse-1359893664\testng-customsuite.xml</span>
+                    <span>C:\Users\shiji\AppData\Local\Temp\testng-eclipse-1258721083\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.HomePageTestCases" hash-for-method="verifyLoginUserNameTC">verifyLoginUserNameTC</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.LoginPageTestCases" hash-for-method="verifyInvalidUser">verifyInvalidUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.HomePageTestCases" hash-for-method="verifyManagePagesMoreInfoLink">verifyManagePagesMoreInfoLink</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.HomePageTestCases" hash-for-method="verifyTotalNumberOfDashboardItems">verifyTotalNumberOfDashboardItems</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.LoginPageTestCases" hash-for-method="verifyLoginButtonText">verifyLoginButtonText</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.HomePageTestCases</span>
+              <span class="class-name">testCases.LoginPageTestCases</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyLoginUserNameTC">
-                  </a> <!-- verifyLoginUserNameTC -->
-                  <span class="method-name">verifyLoginUserNameTC</span>
+                  <a name="verifyInvalidUser">
+                  </a> <!-- verifyInvalidUser -->
+                  <span class="method-name">verifyInvalidUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyManagePagesMoreInfoLink">
-                  </a> <!-- verifyManagePagesMoreInfoLink -->
-                  <span class="method-name">verifyManagePagesMoreInfoLink</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyTotalNumberOfDashboardItems">
-                  </a> <!-- verifyTotalNumberOfDashboardItems -->
-                  <span class="method-name">verifyTotalNumberOfDashboardItems</span>
+                  <a name="verifyLoginButtonText">
+                  </a> <!-- verifyLoginButtonText -->
+                  <span class="method-name">verifyLoginButtonText</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\shiji\AppData\Local\Temp\testng-eclipse-1359893664\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\shiji\AppData\Local\Temp\testng-eclipse-1258721083\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +158,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.HomePageTestCases&quot;/&gt;
+      &lt;class name=&quot;testCases.LoginPageTestCases&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyManagePagesMoreInfoLink')
-data.setCell(0, 2, 'testCases.HomePageTestCases')
-data.setCell(0, 3, 2623);
+data.setCell(0, 1, 'verifyInvalidUser')
+data.setCell(0, 2, 'testCases.LoginPageTestCases')
+data.setCell(0, 3, 1291);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginUserNameTC')
-data.setCell(1, 2, 'testCases.HomePageTestCases')
-data.setCell(1, 3, 2518);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyTotalNumberOfDashboardItems')
-data.setCell(2, 2, 'testCases.HomePageTestCases')
-data.setCell(2, 3, 2105);
+data.setCell(1, 1, 'verifyLoginButtonText')
+data.setCell(1, 2, 'testCases.LoginPageTestCases')
+data.setCell(1, 3, 70);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,42 +237,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.HomePageTestCases</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.LoginPageTestCases</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyLoginUserNameTC</span>
-                <span class="method-start">5952 ms</span>
+                <span class="method-name">verifyInvalidUser</span>
+                <span class="method-start">7554 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=verifyLoginUserNameTC status=SUCCESS method=HomePageTestCases.verifyLoginUserNameTC...)</span>
-                <span class="method-start">8473 ms</span>
+                <span class="method-name">afterMethod([TestResult name=verifyInvalidUser status=SUCCESS method=LoginPageTestCases.verifyInvalidUser()[pri:...)</span>
+                <span class="method-start">8849 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
-                <span class="method-start">8575 ms</span>
+                <span class="method-start">8984 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyManagePagesMoreInfoLink</span>
-                <span class="method-start">12622 ms</span>
+                <span class="method-name">verifyLoginButtonText</span>
+                <span class="method-start">13273 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=verifyManagePagesMoreInfoLink status=SUCCESS method=HomePageTestCases.verifyManageP...)</span>
-                <span class="method-start">15246 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">15323 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyTotalNumberOfDashboardItems</span>
-                <span class="method-start">20136 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=verifyTotalNumberOfDashboardItems status=SUCCESS method=HomePageTestCases.verifyTot...)</span>
-                <span class="method-start">22241 ms</span>
+                <span class="method-name">afterMethod([TestResult name=verifyLoginButtonText status=SUCCESS method=LoginPageTestCases.verifyLoginButtonTex...)</span>
+                <span class="method-start">13345 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
