--- a/SuperMarketProject/test-output/old/Default suite/classes.html
+++ b/SuperMarketProject/test-output/old/Default suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.HomePageTestCases</td>
+<td>testCases.LoginPageTestCases</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyTotalNumberOfDashboardItems</td>
+<td>verifyInvalidUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoginUserNameTC</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyManagePagesMoreInfoLink</td>
+<td>verifyLoginButtonText</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
