--- a/SuperMarketProject/test-output/old/Default suite/methods.html
+++ b/SuperMarketProject/test-output/old/Default suite/methods.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc65a6">  <td>22/04/27 11:53:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestCases.verifyTotalNumberOfDashboardItems()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">verifyTotalNumberOfDashboardItems</td> 
-  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:35</td>   <td>2105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:35</td>   <td>2105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:28</td>   <td>-4812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:35</td>   <td>2105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:28</td>   <td>-4812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="bc65a6">  <td>22/04/27 11:53:25</td>   <td>-7514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestCases.verifyManagePagesMoreInfoLink()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">verifyManagePagesMoreInfoLink</td> 
-  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="68a769">  <td>22/04/27 11:53:28</td>   <td>-4812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1904324159</td>   <td></td> </tr>
-<tr bgcolor="bc65a6">  <td>22/04/27 11:53:19</td>   <td>-14184</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTestCases.verifyLoginUserNameTC()[pri:0, instance:testCases.HomePageTestCases@37374a5e]">verifyLoginUserNameTC</td> 
-  <td>main@1904324159</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>22/04/28 04:46:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.LoginPageTestCases@8e24743]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@688766789</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>22/04/28 04:46:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod(org.testng.ITestResult)[pri:0, instance:testCases.LoginPageTestCases@8e24743]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@688766789</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>22/04/28 04:46:51</td>   <td>-4362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testCases.LoginPageTestCases@8e24743]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@688766789</td>   <td></td> </tr>
+<tr bgcolor="666fae">  <td>22/04/28 04:46:55</td>   <td>-73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestCases.verifyLoginButtonText()[pri:0, instance:testCases.LoginPageTestCases@8e24743]">verifyLoginButtonText</td> 
+  <td>main@688766789</td>   <td></td> </tr>
+<tr bgcolor="9aa799">  <td>22/04/28 04:46:51</td>   <td>-4362</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:testCases.LoginPageTestCases@8e24743]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@688766789</td>   <td></td> </tr>
+<tr bgcolor="666fae">  <td>22/04/28 04:46:50</td>   <td>-5792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestCases.verifyInvalidUser()[pri:0, instance:testCases.LoginPageTestCases@8e24743]">verifyInvalidUser</td> 
+  <td>main@688766789</td>   <td></td> </tr>
 </table>
